Bug 399296 - I18N error in import assistant
Summary: I18N error in import assistant
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Migration/Import/Export (other bugs)
Version First Reported In: 3.1.0
Platform: Ubuntu Linux
: LO minor
Target Milestone: 3.2
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-02 01:54 UTC by gjditchfield
Modified: 2018-12-23 23:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.2.0
Sentry Crash Report:


Attachments
screenshot (79.82 KB, image/png)
2018-10-02 01:54 UTC, gjditchfield
Details

Note You need to log in before you can comment on or make changes to this bug.
Description gjditchfield 2018-10-02 01:54:25 UTC
Created attachment 115356 [details]
screenshot

SUMMARY
The Database Importing Assistant displays "(I18N_ARGUMENT_MISSING)" on its first screen

STEPS TO REPRODUCE
1. Launch Kexi
2. Select "Import, Export or Send..."
3. Click the "Import Database" button.

OBSERVED RESULT
See attached screenshot.

EXPECTED RESULT


SOFTWARE VERSIONS
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 5.44.0
Qt Version: 5.9.5

ADDITIONAL INFORMATION
Comment 1 Jarosław Staniek 2018-12-23 23:51:55 UTC
Git commit 5616004f95107d9d12f38f5c86e28f25fe8d646b by Jaroslaw Staniek.
Committed on 23/12/2018 at 23:51.
Pushed by staniek into branch '3.2'.

Fix translation issue in the Database Importing Assistant

FIXED-IN:3.2.0

M  +18   -4    src/kexiutils/utils.cpp
M  +13   -1    src/kexiutils/utils.h
M  +24   -21   src/migration/importwizard.cpp

https://commits.kde.org/kexi/5616004f95107d9d12f38f5c86e28f25fe8d646b