Fix translation issue in the Database Importing Assistant

FIXED-IN:3.2.0
BUG:399296